# awdible

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  search.html  sitemap.xml
.env/: .env.dev
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bandit.yml  cd.yaml  ci.yaml  docs.yaml  publish.yaml  statics.yaml  tests.yaml
.utils/: Dockerfile.base  Dockerfile.test  build.sh  cd.yaml  clean.py  docker.sh  docs.sh  init.sh  kill_env.sh  pre-commit.sh  pre-push.sh  pytest.sh  sort.py  streamlit.sh
audible/: __init__.py  app.py  cli.py  config.py  crop.py  logger.py  search.py
audible/DEPRECATED/: app.py
audible/console/: application.py  gui.py  run.py
audible/core/: __init__.py  audible.py  convert.py  crop.py  defaults.py  get.py  search.py  validators.py  video.py
audible/download/: get.py
audible/gui/: front.py
awdible/: __init__.py  config.py  helpers.py  logger.py  validators.py
awdible/console/: application.py  gui.py  run.py
awdible/core/: __init__.py  awdible.py  convert.py  crop.py  defaults.py  io.py  prerequires.py  search.py  validators.py  video.py
awdible/gui/: front.py
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: mkdocs.yml
docs/assets/tests/: list_ids.txt  list_queries.txt
docs/docs/: CHANGELOG.md  CONTRIBUTING.md  changelog.md  contributing.md  index.md  installation.md  security.md  usage.md
installation/: index.html
notebooks/: 00-manage.ipynb
search/: search_index.json
security/: index.html
tests/: conftest.py  list_queries.txt
tests/assets/: list_url.txt
tests/integration/core/: test_audible.py  test_awdible.py
tests/unit/: test_config.py  test_get.py  test_helpers.py  test_logger.py  test_validators.py
tests/unit/core/: test_convert.py  test_crop.py  test_io.py  test_prerequires.py  test_search.py  test_video.py
tests/unit/download/: test_get.py
usage/: index.html
utils/: build.sh  pytest.sh  requirements.dev.txt
