[tool.poetry]
name = "audible"
version = "0.2.0"
description = "Just a free version of Audible"
license = "GPL-3.0"
authors = ["AlexandreGazagnes <alex@gazagnes.net>",]
maintainers = ["AlexandreGazagnes <alex@gazagnes.net>",]
readme = "README.md"

homepage = "https://alexandregazagnes.github.io/audible/"
repository = "https://github.com/AlexandreGazagnes/audible/"
documentation = "https://alexandregazagnes.github.io/audible/"

keywords=["python", "music", "tool", "utils", "youtube"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Education", 
    "Intended Audience :: Information Technology",
    "Environment :: Other Environment",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules"

]


packages = [{include = "audible"}]
include = ["docs/docs/CHANGELOG.md", "LICENCE"]

[tool.poetry.urls]
"Homepage" = "https://alexandregazagnes.github.io/audible/"
"Documentation" = "https://alexandregazagnes.github.io/audible/"
"Repository" = "https://github.com/AlexandreGazagnes/audible/tree/main"
# "Code" = "https://github.com/AlexandreGazagnes/audible/tree/main"
"Issues" = "https://github.com/AlexandreGazagnes/audible/issues"
"Changelog" = "https://alexandregazagnes.github.io/audible/CHANGELOG/"


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4"


[tool.poetry.group.core.dependencies]
requests = "^2.31.0"
pytube = "^15.0.0"
youtube-transcript-api = "^0.6.2"
ffmpeg-python = "^0.2.0"
# pandas = ">=1.4.0"
# beautifulsoup4 = "^4.12.2"


[tool.poetry.group.front.dependencies]
streamlit = "^1.29.0"


[tool.poetry.group.dev.dependencies]
python = "3.10.12"
black = "^23.10.1"
ipython = "^8.18.1"
pre-commit = "^3.6.0"


# [tool.poetry.group.notebook.dependencies]
# black = {extras = ["jupyter"], version = "^23.12.1"}
# jupyter = "^1.0.0"
# notebook = "^7.0.6"
# jupyterlab = "^4.0.10"
# ipykernel = "^6.28.0"
# jupytext = "^1.16.0"
# ipywidgets = "^8.1.1"
# nbconvert = "^7.14.0"
# jupyter-contrib-nbextensions = "^0.7.0"


[tool.poetry.group.qa.dependencies]
black = {extras = ["jupyter"], version = "^23.12.1"}
mypy = "^1.8.0"
flake8 = "^7.0.0"
pep8 = "^1.7.1"
pylint = "^3.0.2"
pycln = "^2.4.0"
bandit = "^1.7.7"
isort = "^5.13.2"
# pycodestyle = "^2.11.1"
# pydocstyle = "^6.3.0"
# vulture = "^2.11"
# mccabe = "^0.7.0"
# pyupgrade = "^3.15.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.4.1"
coverage-badge = "^1.1.0"
# pytest-cov

# pytest-cov
# coverage
# coverage-badge


[tool.poetry.group.doc.dependencies]
mkdocs = ">=1.5.3"


[tool.black]
line-length = 79


[tool.pycln]
all = true


[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.pytest.ini_options]
# addopts = ["--cov=sktransf", "--cov-report=term-missing", "--cov-report=xml", "--cov-report=html", "--cov-fail-under=100"]
# filterwarnings = "ignore::DeprecationWarning"
filterwarnings= [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    # 'ignore:function ham\(\) is deprecated:DeprecationWarning',
]


# [tool.mypy]
# show_error_codes = true
# ignore_missing_imports = true
# no_strict_optional = true


[tool.vulture]
exclude = ["*file*.py", "dir/"]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*"]
make_whitelist = true
min_confidence = 80
paths = ["tests/", "sktransf/"]
sort_by_size = true
verbose = true


[tool.coverage.run]
disable_warnings = ["no-data-collected"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"